Ensure services are running

--- a/custom_ami_deployment/install_nginx.yml
+++ b/custom_ami_deployment/install_nginx.yml
@@ -9,3 +9,7 @@
     loop:
       - nginx
       - docker.io
+  - name: Ensure Services is running
+    service:
+      name: '{{ item }}'
+      state: started
