Check docker installed version

--- a/custom_ami_deployment/install_nginx.yml
+++ b/custom_ami_deployment/install_nginx.yml
@@ -33,12 +33,20 @@
   
   - name: Install docker-ce (centos) via amazon-linux-extras packages
     shell: amazon-linux-extras install docker=latest -y
+  
+  - name: Check docker version 
+    command: sudo docker --version
+    register: docker_version
+  - debug:
+      var: docker_version
 
   - name: Enable Docker CE service at startup
     service:
       name: docker
       state: started
       enabled: yes
+  
+  
 
   - name: Enable Nginx service at startup
     service:
