Check nginx service status

--- a/custom_ami_deployment/install_nginx.yml
+++ b/custom_ami_deployment/install_nginx.yml
@@ -57,5 +57,11 @@
       name: nginx
       state: started
       enabled: yes
+
+  - name: Check nginx service status
+    service_facts:
+    register: services_state
+  - debug:
+      var: services_state.ansible_facts.services['nginx.service']
   
   
