set condition to enable service

--- a/custom_ami_deployment/install_nginx.yml
+++ b/custom_ami_deployment/install_nginx.yml
@@ -65,4 +65,4 @@
       name: nginx
       state: started
       enabled: yes
-    when: nginx_version.changed == false
+    when: nginx_version.changed == true
