Update task name (centos)

--- a/custom_ami_deployment/install_nginx.yml
+++ b/custom_ami_deployment/install_nginx.yml
@@ -6,13 +6,13 @@
     linux_distribution: centos
   
   tasks:
-  - name: Update all packages
+  - name: Update all packages (centos)
     yum:
       name: '*'
       state: latest
       update_only: yes
   
-  - name: Ensure a list of yum packages are installed
+  - name: Ensure a list of yum packages are installed (centos)
     yum:
       name: "{{ packages }}"
       state: latest
@@ -22,10 +22,10 @@
       - yum-utils
       - amazon-linux-extras
   
-  - name: Add extras repository
+  - name: Add extras repository (centos)
     shell: yum-config-manager --enable extras
 
-  - name: Install nginx
+  - name: Install nginx (centos)
     shell: amazon-linux-extras install nginx1.12=latest -y
     notify:
       - Enable Nginx service at startup
@@ -36,7 +36,7 @@
   - debug:
       var: nginx_version.stderr
   
-  - name: Install docker-ce (centos) via amazon-linux-extras packages
+  - name: Install docker-ce (centos)
     shell: amazon-linux-extras install docker=latest -y
     notify:
       - Enable Docker CE service at startup
