Test linux distribution condition for centos

--- a/custom_ami_deployment/install_nginx.yml
+++ b/custom_ami_deployment/install_nginx.yml
@@ -11,6 +11,7 @@
       name: '*'
       state: latest
       update_only: yes
+    when: linux_distribution == "centos"
   
   - name: Ensure a list of yum packages are installed (centos)
     yum:
