--- a/ansible/tasks/nginx.yml
+++ b/ansible/tasks/nginx.yml
@@ -11,10 +11,6 @@
     name: "{{ packages }}"
     state: latest
     update_cache: yes
-  vars:
-    packages:
-    - yum-utils
-    - amazon-linux-extras
   when: linux_distribution == "centos"
 
 - name: Add extras repository (centos)
@@ -22,7 +18,7 @@
   when: linux_distribution == "centos"
 
 - name: Install nginx (centos)
-  shell: amazon-linux-extras install nginx1.12=latest -y
+  shell: amazon-linux-extras install nginx1.12={{nginx_version}} -y
   when: linux_distribution == "centos"
   notify:
     - Enable Nginx service at startup
