--- a/ansible/tests/debug.yml
+++ b/ansible/tests/debug.yml
@@ -1,5 +1,20 @@
 ---
-- hosts: localhost
-  remote_user: root
-  roles:
-    - test
+- name: Check nginx version 
+  command: sudo nginx -v
+  register: nginx_version
+- debug:
+    var: nginx_version.stderr
+
+- name: Check docker version 
+  command: sudo docker --version
+  register: docker_version
+- debug:
+      var: docker_version.stdout
+
+- name: Check installed service status
+  service_facts:
+  register: services_state
+- debug:
+  var: services_state.ansible_facts.services['nginx.service']
+- debug:
+    var: services_state.ansible_facts.services['docker.service']
